Program section finished

--- a/index.html
+++ b/index.html
@@ -30,7 +30,93 @@
                 <div class="lp" id="landingpage">
                     <!-- program -->
                     <section class="lpProgram addPolygon sectionMargin">
+                        <picture>
+                            <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image@2x.webp 2x" />
+                            <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image@2x.png 2x" />
+                            <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image.png" alt="LEGO Aeroplane" width="239" height="177" loading="lazy" class="lpProgram__image" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image@2x.png 2x" />
+                        </picture>
+
                         <div class="lpWrapper">
+                            <div class="lpTextWrapper">
+                                <h2 class="hdl2">Zábavné odpoledne v LEGO® Shopu</h2>
+                                <p class="subHdl">Při příležitosti otevření LEGO® Shopu ve čtvrtek 22. 6. v našem holešovickém Showroomu jsme si pro vás připravili zábavné odpoledne. Na co se můžete kromě dárku LEGO Creator Raketoplán 31134 ke každému nákupu těšit?</p>
+                            </div>  
+
+                            <!-- schedule -->
+                            <div class="lpSchedule blockMargin">
+                                <div class="lpSchedule__left">
+                                    <!-- timeline -->
+                                    <div class="lpTimeline">
+                                        <ul class="lpItems">
+                                            <li class="lpItems__item">
+                                                <div class="lpItems__bullet">&nbsp;</div>
+                                                <h4 class="hdl4">8:00</h4>
+                                                <p class="perex">Otevření LEGO® Shopu</p>
+                                            </li>
+                                            <li class="lpItems__item">
+                                                <div class="lpItems__bullet">&nbsp;</div>
+                                                <h4 class="hdl4">13:00</h4>
+                                                <p class="perex">Slavnostní přestřizení pásky LEGO za účasti influencera Jirky Krále a&nbsp;NASA designéra Tomáše Rouska</p>
+                                            </li>
+                                            <li class="lpItems__item">
+                                                <div class="lpItems__bullet">&nbsp;</div>
+                                                <h4 class="hdl4">14:00</h4>
+                                                <p class="perex">První přednáška o vesmíru NASA designéra Tomáše Rouska</p>
+                                            </li>
+                                            <li class="lpItems__item">
+                                                <div class="lpItems__bullet">&nbsp;</div>
+                                                <h4 class="hdl4">14:30</h4>
+                                                <p class="perex">Podpisová akce NASA designéra Tomáše Rouska</p>
+                                            </li>
+                                            <li class="lpItems__item">
+                                                <div class="lpItems__bullet">&nbsp;</div>
+                                                <h4 class="hdl4">15:30</h4>
+                                                <p class="perex">Druhá přednáška o vesmíru NASA designéra Tomáše Rouska</p>
+                                            </li>
+                                            <li class="lpItems__item">
+                                                <div class="lpItems__bullet">&nbsp;</div>
+                                                <h4 class="hdl4">16:30</h4>
+                                                <p class="perex">Podpisová akce NASA designéra Tomáše Rouska</p>
+                                            </li>
+                                            <li class="lpItems__item">
+                                                <div class="lpItems__bullet">&nbsp;</div>
+                                                <h4 class="hdl4">20:00</h4>
+                                                <p class="perex">Uzavření LEGO® Shopu</p>
+                                            </li>
+                                        </ul> 
+                                    </div>
+
+                                    <!-- info -->
+                                    <div class="lpSchedule__info blockMargin">
+                                        <p class="perex perex--headline">Buďte součástí našeho velkého dne a užijte si zábavu spolu s dětmi. Na co se můžete těšit?</p>
+
+                                        <ul class="lpItems">
+                                            <li class="lpItems__item perex">Ke každému nákupu stavebnice LEGO <a class="perex--link" href="#">dárek LEGO Creator Raketoplán 31134*</a></li>
+                                            <li class="lpItems__item perex">Prohlédnutí vesmírné sondy LEGO® a velké 3D sochy Darth Vadera</li>
+                                            <li class="lpItems__item perex">Opakované střihání pásky speciálními nůžkami LEGO®</li>
+                                            <li class="lpItems__item perex">Speciální vesmírný odznáček pro všechny jako dárek</li>
+                                            <li class="lpItems__item perex">Soutěže o batůžek LEGO®</li>
+                                            <li class="lpItems__item perex">Promítání vesmírného videa</li>
+                                            <li class="lpItems__item perex">Focení s maskoty Alzáka a LEGO®</li>
+                                        </ul>
+
+                                        <p class="body-2">* do vyčerpání zásob</p>
+                                    </div>
+                                </div>
+
+                                <div class="lpSchedule__right">
+                                    <picture>
+                                        <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/darth-vader.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/darth-vader@2x.webp 2x" />
+                                        <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/darth-vader.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/darth-vader@2x.png 2x" />
+                                        <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/darth-vader.png" alt="Darth Vader 3D Socha" width="335" height="355" loading="lazy" class="lpSchedule__photo" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/darth-vader.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/darth-vader@2x.png 2x" />
+                                    </picture>
+                                    <div class="lpBoxText">
+                                        <p class="perex">3D SOCHA</p>
+                                        <h3 class="hdl3">Darth Vader</h3>
+                                    </div>
+                                </div>
+                            </div>
+
                             <!-- guests -->
                             <div class="lpGuest lpGrid-2 blockMargin">
                                 <div class="lpGuest__box">
@@ -39,10 +125,11 @@
                                         <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/tomas.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/tomas@2x.png 2x" />
                                         <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/tomas.png" alt="Tomáš Rousek - NASA Designer" width="393" height="354" loading="lazy" class="lpGuest__photo" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/tomas.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/tomas@2x.png 2x" />
                                     </picture>
+
                                     <div class="lpBoxText">
                                         <p class="perex">NASA designer</p>
                                         <h3 class="hdl3">Tomáš Rousek</h3>
-                                        <p class="perex">Tomáš Rousek je designér NASA, který navrhl speciální sondu LEGO®. Ta se v rámci vesmírné plavby dostala až do stratosféry. Tomáš si pro vás připravil, přednášku o vesmíru a podpisovou akci.</p>
+                                        <p class="perex perex--short">Tomáš Rousek je designér NASA, který navrhl speciální sondu LEGO®. Ta se v rámci vesmírné plavby dostala až do stratosféry. Tomáš si pro vás připravil, přednášku o vesmíru a podpisovou akci.</p>
                                     </div>
                                 </div>
 
@@ -55,7 +142,7 @@
                                     <div class="lpBoxText">
                                         <p class="perex">Influencer</p>
                                         <h3 class="hdl3">Jirka Král</h3>
-                                        <p class="perex">Hvězda českého YouTube, influencer a úspěšný podnikatel Jirka Král patří mezi velké fanoušky stavebnic LEGO®, takže je jasné, že na našem slavnostním otevření LEGO® Shopu rozhodně nemůže chybět.</p>
+                                        <p class="perex perex--short">Hvězda českého YouTube, influencer a úspěšný podnikatel Jirka Král patří mezi velké fanoušky stavebnic LEGO®, takže je jasné, že na našem slavnostním otevření LEGO® Shopu rozhodně nemůže chybět.</p>
                                     </div>
                                 </div>
                             </div>
@@ -146,7 +233,7 @@
                                 <picture>
                                     <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image@2x.webp 2x" />
                                     <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image@2x.png 2x" />
-                                    <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image.png" alt="LEGO Showroom foto" width="445" height="398" loading="lazy" class="lpInvite__image" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image@2x.png 2x" />
+                                    <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image.png" alt="LEGO Aeroplane" width="445" height="398" loading="lazy" class="lpInvite__image" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image@2x.png 2x" />
                                 </picture>
 
                                 <div class="lpInvite__textWrapper lpBoxText">
