Header not finished

--- a/index.html
+++ b/index.html
@@ -28,8 +28,16 @@
             <div id="articlePage">
                 <!-- BEFORE UPLOADING REMOVE EVERYTHING ABOVE UP TO THIS POINT -->
                 <div class="lp" id="landingpage">
+                    <header class="lpHeader sectionMargin">
+                        <div class="lpWrapper">
+
+                        </div>
+                    </header>
+
                     <!-- program -->
-                    <section class="lpProgram addPolygon sectionMargin">
+                    <section class="lpProgram">
+                        <div class="addPolygon--top">&nbsp;</div>
+                        <div class="addPolygon--bottom">&nbsp;</div>
                         <picture>
                             <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image@2x.webp 2x" />
                             <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/invite-image@2x.png 2x" />
@@ -174,7 +182,9 @@
                     </section>
 
                     <!-- showroom -->
-                    <section class="lpShowroom addPolygon sectionMargin">
+                    <section class="lpShowroom">
+                        <div class="addPolygon--top">&nbsp;</div>
+                        <div class="addPolygon--bottom">&nbsp;</div>
                         <div class="lpWrapper"> 
                             <picture>
                                 <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/showroom-badge.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/showroom-badge@2x.webp 2x" />
