Photo changes, changed width in the header parts

--- a/index.html
+++ b/index.html
@@ -277,14 +277,14 @@
                                 <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo-star.svg" alt="Star icon" class="lpPhotos__star" width="180" height="188">   
                                 <div class="lpPhotos__wrapper lpGrid-2">
                                     <picture>
-                                        <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo-1.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo-1@2x.webp 2x" />
-                                        <source type="image/jpg" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo-1.jpg, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo-1@2x.jpg 2x" />
-                                        <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo-1.jpg" alt="LEGO Showroom foto" width="570" height="236" loading="lazy" class="lpPhotos__photo" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo-1.jpg, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo-1@2x.jpg 2x" />
+                                        <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo1-v2.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo1-v2@2x.webp 2x" />
+                                        <source type="image/jpg" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo1-v2.jpg, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo1-v2@2x.jpg 2x" />
+                                        <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo1-v2.jpg" alt="LEGO Showroom foto" width="570" height="300" loading="lazy" class="lpPhotos__photo" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo1-v2.jpg, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo1-v2@2x.jpg 2x" />
                                     </picture>
                                     <picture>
-                                        <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo-2.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo-2@2x.webp 2x" />
-                                        <source type="image/jpg" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo-2.jpg, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo-2@2x.jpg 2x" />
-                                        <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo-2.jpg" alt="LEGO Showroom foto" width="570" height="236" loading="lazy" class="lpPhotos__photo" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo-2.jpg, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo-2@2x.jpg 2x" />
+                                        <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo2-v2.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo2-v2@2x.webp 2x" />
+                                        <source type="image/jpg" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo2-v2.jpg, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo2-v2@2x.jpg 2x" />
+                                        <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo2-v2.jpg" alt="LEGO Showroom foto" width="570" height="300" loading="lazy" class="lpPhotos__photo" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo2-v2.jpg, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/photo2-v2@2x.jpg 2x" />
                                     </picture>
                                 </div>
                             </div>
@@ -472,7 +472,7 @@
 
                                 <div class="lpProcess__box">
                                     <span class="lpProcess__number">2</span>
-                                    <p class="perex">Zaregistrujte svůj nákup na <a href="www.epickalegovyhra.cz" class="perex--link">www.epickalegovyhra.cz</a> nejpozději do&nbsp;31.&nbsp;7.&nbsp;2023.</p>
+                                    <p class="perex">Zaregistrujte svůj nákup na <a href="www.epickalegovyhra.cz" class="perex--link">Epická LEGO<sup>®</sup> výhra</a> nejpozději do&nbsp;31.&nbsp;7.&nbsp;2023.</p>
                                 </div>
 
                                 <div class="lpProcess__box">
@@ -481,7 +481,7 @@
                                 </div>
                             </div>
 
-                            <a href="#" class="btn btn--media blockMargin"><span class="btn-text">Více informací</span></a>
+                            <a href="www.epickalegovyhra.cz" class="btn btn--media blockMargin"><span class="btn-text">Více informací</span></a>
 
                             <div class="lpVideo blockMargin">
                                 <iframe src="https://www.youtube.com/embed/Jm18GVeZhl8" title="Epická LEGO<sup>®</sup> výhra - Záznam 3 letů do vesmíru" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
