Page is finished

--- a/index.html
+++ b/index.html
@@ -430,11 +430,13 @@
                     <!-- competition -->
                     <section class="lpCompetition">
                         <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/dots.svg" alt="LEGO® logo" class="lpDots lpDots--right" width="831" height="916" loading="eager" />
-                        <picture>
-                            <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra@2x.webp 2x" />
-                            <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra@2x.png 2x" />
-                            <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra.png" alt="Epická LEGO výhra" width="180" height="115" loading="lazy" class="lpCompetition__badge" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra@2x.png 2x" />
-                        </picture>
+                        <div class="lpCompetition__badgeWrapper">
+                            <picture>
+                                <source type="image/webp" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra.webp, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra@2x.webp 2x" />
+                                <source type="image/png" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra@2x.png 2x" />
+                                <img src="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra.png" alt="Epická LEGO výhra" width="180" height="115" loading="lazy" class="lpCompetition__badge runAnimation" srcset="https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra.png, https://cdn.alza.cz/Foto/or/lp/lego-sis/build/img/epicka-vyhra@2x.png 2x" />
+                            </picture>
+                        </div>
                 
                         <div class="lpWrapper">
                             <div class="lpTextWrapper">
@@ -569,7 +571,7 @@
                             <a class="btn btn--media blockMargin gaTrack" data-ga="Button Epická LEGO výhra" href="www.epickalegovyhra.cz"><span class="btn-text">Více informací</span></a>
                 
                             <div class="lpVideo runAnimation blockMargin">
-                                <iframe title="Epická LEGO® výhra - Záznam 3 letů do vesmíru" frameborder="0" allowfullscreen="" src="https://www.youtube.com/embed/Jm18GVeZhl8"></iframe>
+                                <iframe title="Epická LEGO® výhra - Záznam 3 letů do vesmíru" frameborder="0" allowfullscreen="" loading="lazy" src="https://www.youtube.com/embed/Jm18GVeZhl8"></iframe>
                             </div>
                         </div>
                     </section>
